# deadbeef-mpris2-plugin

./: Makefile.am  README  README.md  configure.ac
.github/workflows/: linuxbuild.yml
src/: logging.h  mpris.c  mprisServer.c  mprisServer.h
